# faux_nixie_clock

./: readme.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
firmware/components/cmd/: cmd_list.h  cmd_utilities.c  cmd_utilities.h
firmware/components/gui/: CMakeLists.txt  gui_screen_main.c  gui_screen_main.h
firmware/components/i2c/: i2c.c  i2c.h
firmware/components/lvgl/: lv_conf.h
firmware/components/lvgl_tft/: CMakeLists.txt  disp_driver.c  disp_driver.h  ili9488.c
firmware/components/platform/: CMakeLists.txt  gcore.c  gcore.h  power_utilities.c  power_utilities.h  ps_utilities.c  ps_utilities.h  rtc.c  rtc.h
firmware/components/utilities/: CMakeLists.txt  cmd_handlers.c  cmd_handlers.h  sntp_utilities.c  sntp_utilities.h  sys_info.c  sys_info.h  sys_utilities.c  sys_utilities.h  time_utilities.c  time_utilities.h  wifi_utilities.c  wifi_utilities.h  ws_cmd_utilities.c  ws_cmd_utilities.h
firmware/components/web_assets/: CMakeLists.txt
firmware/emscripten/: CMakeLists.txt  readme.txt
firmware/emscripten/gui/: CMakeLists.txt  gui_cmd_handlers.c  gui_cmd_handlers.h  gui_page_settings.c  gui_page_settings.h  gui_panel_settings_backlight.c  gui_panel_settings_backlight.h  gui_panel_settings_info.c  gui_panel_settings_info.h  gui_panel_settings_mode.c  gui_panel_settings_mode.h  gui_panel_settings_poweroff.c  gui_panel_settings_poweroff.h  gui_panel_settings_time.c  gui_panel_settings_time.h  (+28 more)
firmware/main/: CMakeLists.txt  ctrl_task.c  ctrl_task.h  gui_task.c  gui_task.h  main.c  system_config.h  web_task.c  web_task.h
(+21 files in other folders)
